# basic-text-effects

./: .gitignore  pyproject.toml
