[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Tom Reinhardt", email="tomreinhardt3120@gmail.com" },
]
description = "basic text effects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Biomass2857/basic-text-effects"
Issues = "https://github.com/Biomass2857/basic-text-effects/issues"